--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -792,7 +792,7 @@ main {
 		display: block;
     position: relative;
 		flex: 1;
-		padding: 1em;
+		// padding: 1em;
 
 		#geocoder{
 			position: absolute;
@@ -803,7 +803,7 @@ main {
 		#map{
 			width: 100%;
 			height: 100%;
-			box-shadow: -2px 2px 10px 1px rgba($color-1, 0.5);
+			// box-shadow: -2px 2px 10px 1px rgba($color-1, 0.5);
 		}
     #legend.active{
       display: block;
